fini pour ecole

--- a/sem09-etudiant/semaine09/css/styles.css
+++ b/sem09-etudiant/semaine09/css/styles.css
@@ -95,10 +95,15 @@ nav a:hover{
 }
 
 /* Exercice 16 */
-
+.exercice16 p:not(:lang(fr)){
+    color: red;
+}
 
 /* Exercice 17 */
-
+.exercice17 [type='value']:checked label{
+    color: red;
+    
+}
 
 /* Exercice 18 */
 
